# component-importer-for-kicad

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app_paths.py  cad_zip_importer.py  download_import_helper.py  gui_config_manager.py  gui_config_tab.py  gui_import_tab.py  gui_import_worker.py  gui_main.py  gui_main.pyw  gui_main_window.py  gui_search_tab.py  gui_style.py  import_validator.py  online_component_search.py  project_library_initializer.py  pyproject.toml  run_gui.bat  run_jupyter.bat  symbol_footprint_linker.py  symbol_library_manager.py  zip_inspector.py  zip_scanner.py
docs/: INSTALL.md  LINUX.md  PUBLISHING.md  index.html
packaging/: KiCadComponentImporter.iss  build_linux_bundle.sh  build_windows_installer.ps1
src/component_importer/: app_paths.py  backup_helper.py  cad_zip_importer.py  download_import_helper.py  file_discovery.py  footprint_3d_fixer.py  gui_config_manager.py  gui_config_tab.py  gui_how_to_use_tab.py  gui_import_tab.py  gui_import_worker.py  gui_main.py  gui_main.pyw  gui_main_window.py  gui_scan_watcher.py  gui_search_tab.py  gui_style.py  gui_symbol_style_tab.py  import_summary.py  import_validator.py  library_table_updater.py  models.py  project_library.py  project_library_initializer.py  single_instance.py  startup_manager.py  symbol_footprint_linker.py  symbol_library_manager.py  symbol_style.py  zip_inspector.py  zip_scanner.py
